style guide in tests